2017-06-10
----------

Improvements:
* Fix counter showing number of gifts on the dashboard
* Docker image now runs the cron to send emails
* Fix Russian translations

2017-06-09
----------

New features:
* Add Docker support
* Add Russian language
* Add Portuguese (Brazil) language

Improvements:
* Fix emails being sent too often
* Breaking change: Email name and address of the user who sends reminders are now ENV variables (MAIL_FROM_ADDRESS and MAIL_FROM_NAME).

2017-06-08
----------

New features:
* Add Gravatar automatically when adding an email address to a contact. If no gravatar found, defaults to the initials.

Improvements:
* Dramatically reduce the number of queries necessary to load the list of contacts on the People's tab.
* Phone number are now treated like a string and not integers on the front-end side.
* Breaking change: Add a new env variable to define which email address should be used when sending notifications about new user signups. You need to add this new env variable (APP_EMAIL_NEW_USERS_NOTIFICATION) to your `.env` file.
* Fix typos and small bugs

2017-06-07
----------

* Add ability to delete a contact
* Add a changelog