@@ -58,6 +58,9 @@ return [
     'information_edit_max_size' => 'Max :size Mb.',
     'information_edit_firstname' => 'First name',
     'information_edit_lastname' => 'Last name (Optional)',
+    'information_edit_facebook' => 'Facebook profile (optional)',
+    'information_edit_twitter' => 'Twitter profile (optional)',
+    'information_edit_linkedin' => 'LinkedIn profile (optional)',
     'information_edit_street' => 'Street (optional)',
     'information_edit_province' => 'Province (optional)',
     'information_edit_postalcode' => 'Postal code (optional)',
@@ -72,6 +75,9 @@ return [
     'information_no_address_defined' => 'No address defined',
     'information_no_email_defined' => 'No email address defined',
     'information_no_phone_defined' => 'No phone number defined',
+    'information_no_facebook_defined' => 'No Facebook defined',
+    'information_no_twitter_defined' => 'No Twitter defined',
+    'information_no_linkedin_defined' => 'No LinkedIn defined',
 
     // food preferencies
     'food_preferencies_add_success' => 'Food preferences have been saved',
