@@ -58,6 +58,9 @@ return [
     'information_edit_max_size' => 'Max :size Mb.',
     'information_edit_firstname' => 'Prénom',
     'information_edit_lastname' => 'Nom de famille (optionnel)',
+    'information_edit_facebook' => 'Profil Facebook (optionel)',
+    'information_edit_twitter' => 'Profil Twitter (optionel)',
+    'information_edit_linkedin' => 'Profil LinkedIn (optionel)',
     'information_edit_street' => 'Rue (optionnel)',
     'information_edit_province' => 'Province (optionnel)',
     'information_edit_postalcode' => 'Code postal (optionnel)',
@@ -72,6 +75,9 @@ return [
     'information_no_address_defined' => 'Aucune adresse définie',
     'information_no_email_defined' => 'Aucun courriel défini',
     'information_no_phone_defined' => 'Aucun numéro de téléphone défini',
+    'information_no_facebook_defined' => 'Aucun Facebook défini',
+    'information_no_twitter_defined' => 'Aucun Twitter défini',
+    'information_no_linkedin_defined' => 'Aucun LinkedIn défini',
 
     // food preferencies
     'food_preferencies_add_success' => 'Les préférences alimentaires ont été mises à jour.',
