@@ -106,7 +106,7 @@
                 <label for="city">{{ trans('people.information_edit_city') }}</label>
                 <input type="text" class="form-control" name="city" value="{{ $contact->getCity() }}">
                 <label for="country">{{ trans('people.information_edit_country') }}</label>
-                
+
                 @include('partials.components.country-select',['selectionID'=>$contact->getCountryID()])
 
               </div>
@@ -117,12 +117,31 @@
                 <input type="email" class="form-control" name="email" value="{{ $contact->getEmail() }}">
               </div>
 
-              {{-- Email address --}}
+              {{-- Phone --}}
               <div class="form-group">
                 <label for="phone">{{ trans('people.information_edit_phone') }}</label>
                 <input class="form-control" name="phone" value="{{ $contact->getPhone() }}">
               </div>
 
+              {{-- Facebook --}}
+              <div class="form-group">
+                <label for="facebook">{{ trans('people.information_edit_facebook') }}</label>
+                <input class="form-control" name="facebook" value="{{ $contact->getFacebook() }}" placeholder="https://facebook.com/john.doe">
+              </div>
+
+              {{-- Twitter --}}
+              <div class="form-group">
+                <label for="twitter">{{ trans('people.information_edit_twitter') }}</label>
+                <input class="form-control" name="twitter" value="{{ $contact->getTwitter() }}" placeholder="https://twitter.com/john.doe">
+              </div>
+
+              {{-- LinkedIn --}}
+              <div class="form-group">
+                <label for="linkedin">{{ trans('people.information_edit_linkedin') }}</label>
+                <input class="form-control" name="linkedin" value="{{ $contact->getLinkedin() }}" placeholder="https://linkedin.com/john.doe">
+              </div>
+
+              {{-- Birthdate --}}
               <fieldset class="form-group dates">
 
                 {{-- Don't know the birthdate --}}
